--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -543,6 +543,8 @@
     <Content Include="Views\Moderator\CreateOffer.cshtml" />
     <Content Include="Views\Moderator\Settings.cshtml" />
     <Content Include="Views\Moderator\TryConnect.cshtml" />
+    <Content Include="Views\Admin\Forum.cshtml" />
+    <Content Include="Views\Admin\View.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
