--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -546,6 +546,8 @@
     <Content Include="Views\Moderator\TryConnect.cshtml" />
     <Content Include="Views\Admin\Forum.cshtml" />
     <Content Include="Views\Admin\View.cshtml" />
+    <Content Include="Views\AdminForum\Edit.cshtml" />
+    <Content Include="Views\AdminForum\Create.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -613,7 +615,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Images\" />
-    <Folder Include="Views\AdminForum\" />
+    <Folder Include="Views\tForumLists\" />
     <Folder Include="Views\Upload\" />
   </ItemGroup>
   <ItemGroup>
