--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -551,6 +551,8 @@
     <Content Include="Views\AdminForum\Create.cshtml" />
     <Content Include="Views\Rules\Rules.cshtml" />
     <Content Include="Views\Rules\Edit.cshtml" />
+    <Content Include="Views\ForumThemes\_Stat.cshtml" />
+    <Content Include="Views\ForumMessages\_Stat.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
