--- a/TalismanSqlForum/Web.config
+++ b/TalismanSqlForum/Web.config
@@ -20,6 +20,7 @@
     <add key="MvcSiteMapProvider_IncludeAssembliesForScan" value="TalismanSqlForum" />
     <add key="MvcSiteMapProvider_UseExternalDIContainer" value="false" />
     <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
+    <add key="MvcSiteMapProvider_cacheDuration" value="0" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
