небольшие фиксации с сылками и некоторыми остальными вещами

--- a/TalismanSqlForum/packages.config
+++ b/TalismanSqlForum/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="ckeditor-standard" version="4.4.3" targetFramework="net451" />
+  <package id="email" version="1.1.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="EntityFramework.ru" version="6.1.1" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.1" targetFramework="net451" />
