--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -565,6 +565,7 @@
     <Content Include="Views\Rules\Edit.cshtml" />
     <Content Include="Views\ForumThemes\_Stat.cshtml" />
     <Content Include="Views\ForumMessages\_Stat.cshtml" />
+    <Content Include="Views\Account\ManageUser.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
