--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -199,6 +199,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Code\Mail.cs" />
     <Compile Include="Code\MenuDynamicNodeProvider.cs" />
+    <Compile Include="Code\Notify.cs" />
     <Compile Include="Code\Stat.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Admin\AdminController.cs" />
@@ -210,6 +211,7 @@
     <Compile Include="Controllers\ForumThemesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\Moderator\ModeratorController.cs" />
+    <Compile Include="Controllers\Notify\NotificationsController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\UploadController.cs" />
     <Compile Include="Global.asax.cs">
@@ -224,6 +226,8 @@
     <Compile Include="Models\Forum\tForumThemes.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Moderator\tModerator.cs" />
+    <Compile Include="Models\Notification\tNotification.cs" />
+    <Compile Include="Models\Notification\tNotificationType.cs" />
     <Compile Include="Models\Users\UserNewThemes.cs" />
     <Compile Include="Models\ViewModel\CreateOffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -572,6 +576,7 @@
     <Content Include="Views\AdminUser\UserPartital\_UsersWait.cshtml" />
     <Content Include="Views\AdminUser\UserPartital\_UsersModerator.cshtml" />
     <Content Include="Views\AdminUser\UserPartital\_UsersOther.cshtml" />
+    <Content Include="Views\Notifications\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
