--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -577,6 +577,7 @@
     <Content Include="Views\AdminUser\UserPartital\_UsersModerator.cshtml" />
     <Content Include="Views\AdminUser\UserPartital\_UsersOther.cshtml" />
     <Content Include="Views\Notifications\Index.cshtml" />
+    <Content Include="Views\Notifications\New.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
