--- a/TalismanSqlForum/Web.config
+++ b/TalismanSqlForum/Web.config
@@ -21,6 +21,8 @@
     <add key="MvcSiteMapProvider_UseExternalDIContainer" value="false" />
     <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
     <add key="MvcSiteMapProvider_cacheDuration" value="0" />
+    <add key="email_account" value ="TalismanSqlForum"/>
+    <add key ="email_pass" value ="Shidzenreku1988#"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
