--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -581,6 +581,7 @@
     <Content Include="Views\Notifications\New.cshtml" />
     <Content Include="Views\ForumThemes\Edit.cshtml" />
     <Content Include="Views\ForumThemes\Transfer.cshtml" />
+    <Content Include="Views\ForumMessages\Edit.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
