--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Controllers\Admin\AdminForumController.cs" />
     <Compile Include="Controllers\Admin\AdminUserController.cs" />
     <Compile Include="Controllers\Admin\RulesController.cs" />
+    <Compile Include="Controllers\ContentController.cs" />
     <Compile Include="Controllers\ForumListController.cs" />
     <Compile Include="Controllers\ForumMessagesController.cs" />
     <Compile Include="Controllers\ForumThemesController.cs" />
@@ -221,7 +222,6 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin\tRules.cs" />
-    <Compile Include="Models\Admin\ViewRole.cs" />
     <Compile Include="Models\Forum\tForumList.cs" />
     <Compile Include="Models\Forum\tForumMessages.cs" />
     <Compile Include="Models\Forum\tForumThemes.cs" />
@@ -232,7 +232,6 @@
     <Compile Include="Models\Offer\tOffer.cs" />
     <Compile Include="Models\Users\tUserNewMessages.cs" />
     <Compile Include="Models\Users\UserNewThemes.cs" />
-    <Compile Include="Models\ViewModel\CreateOffer.cs" />
     <Compile Include="Models\ViewModel\tForumThemes_Edit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -562,12 +561,7 @@
     <Content Include="Views\Shared\_LayoutAdmi.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\Users.cshtml" />
-    <Content Include="Views\Admin\UsersGet.cshtml" />
-    <Content Include="Views\Moderator\CreateOffer.cshtml" />
-    <Content Include="Views\Moderator\Settings.cshtml" />
-    <Content Include="Views\Moderator\TryConnect.cshtml" />
     <Content Include="Views\Admin\Forum.cshtml" />
-    <Content Include="Views\Admin\View.cshtml" />
     <Content Include="Views\AdminForum\Edit.cshtml" />
     <Content Include="Views\AdminForum\Create.cshtml" />
     <Content Include="Views\Rules\Rules.cshtml" />
@@ -641,16 +635,9 @@
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\_RemoveAccountPartial.cshtml" />
     <Content Include="Views\Account\_SetPasswordPartial.cshtml" />
-    <Content Include="Views\Account\ConfirmEmail.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
-    <Content Include="Views\Account\ForgotPassword.cshtml" />
-    <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Account\ResetPassword.cshtml" />
-    <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <None Include="_bin_deployableAssemblies\amd64\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
     <None Include="_bin_deployableAssemblies\x86\Microsoft.VC90.CRT\Microsoft.VC90.CRT.manifest" />
@@ -658,7 +645,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Images\" />
-    <Folder Include="Views\AdminBt\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
