--- a/TalismanSqlForum/Web.Release.config
+++ b/TalismanSqlForum/Web.Release.config
@@ -15,7 +15,8 @@
     </connectionStrings>
   -->
   <system.web>
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <compilation xdt:Transform= "Remove"/>
+    <httpRuntime xdt:Transform="Remove"/>
     <!--
       В следующем примере преобразование "Replace" будет заменять весь 
       раздел <customErrors> в файле Web.config.
@@ -27,5 +28,6 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
+    <customErrors mode="Off" xdt:Transform="Replace"/>
   </system.web>
 </configuration>
