--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -580,6 +580,7 @@
     <Content Include="Views\Moder\Settings.cshtml" />
     <Content Include="Views\Moder\CreateOffer.cshtml" />
     <Content Include="Views\Admin\Bt.cshtml" />
+    <None Include="Properties\PublishProfiles\TalismanWD.pubxml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
