--- a/TalismanSqlForum/TalismanSqlForum.csproj
+++ b/TalismanSqlForum/TalismanSqlForum.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Models\Notification\tNotification.cs" />
     <Compile Include="Models\Notification\tNotificationType.cs" />
     <Compile Include="Models\Offer\tOffer.cs" />
+    <Compile Include="Models\Stat\tStatForum.cs" />
     <Compile Include="Models\Users\tUserNewMessages.cs" />
     <Compile Include="Models\Users\UserNewThemes.cs" />
     <Compile Include="Models\ViewModel\tForumThemes_Edit.cs" />
