--- a/TalismanSqlForum/Web.config
+++ b/TalismanSqlForum/Web.config
@@ -25,7 +25,7 @@
     <add key ="email_pass" value ="Shidzenreku1988#"/>
   </appSettings>
   <system.web>
-    <customErrors mode="On"/>
+    <customErrors mode="RemoteOnly"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
